# bufala

./: .env.demo  .env.example  .gitignore  .pre-commit-config.yaml  AGRICULTURA_FAMILIAR.md  AGRICULTURA_TELA_CORRIGIDA.md  APRENDE_COMIGO.md  ARQUITETURA_PROJETO.md  BACKEND_MODULAR_GUIDE.md  COMUNICACAO_FLUTTER_BACKEND_STATUS.md  COMUNICACAO_FLUTTER_BACKEND_STATUS_FINAL.md  COMUNICACAO_FLUTTER_BACKEND_SUCCESS.md  COMUNICACAO_FLUTTER_BACKEND_SUCESSO_COMPLETO.md  CONFIGURACAO_GEMMA3N_E2B_E4B.md  CORRECAO.md  CORRECAO_BOTAO_ANALISE_AMBIENTE.md  CORRECAO_ERRO_ANALISE_AMBIENTE.md  DIRETRIZES_ETICAS_MODO_PROVOCATIVO.md  DOC_GEMMA-3N.md  DOC_GEMMA3N_2b-t.md  Despositivos_moveis.md  Doc_gemma-3n-4b.md  EDUCATION_SCREEN_ENHANCED_REPORT.md  ENDPOINTS_BU_FALA.md  FUNCIONALIDADES_COLABORATIVAS.md  FUTTER_COMMAND.md  GEMMA3N_DOCUMENTATION_IMPROVEMENTS.md  GUIA_MIGRACAO_PADRONIZACAO.md  INSTRUCOES_SUBMISSAO_HACKATHON.md  LEIA.md  LICENSE  MEDIAPIPE_REMOVAL_SUCCESS.md  MELHORIAS_IMPLEMENTADAS_FINAL.md  ME_ENSINA.md  PADRONIZACAO_ENDPOINTS.md  PARSER_INTELIGENTE_SUCCESS.md  PROBLEMA_AGRICULTURA_RESOLVIDO_FINAL.md  PROBLEMA_RESOLVIDO_GEMMA3N.md  PROJETO_LIMPEZA_ORGANIZACAO.md  Prompt_MediaPipe_GenAI_Moransa.md  (+46 more)
.codex/skills/moransa-backend-p0-tests/: SKILL.md
.github/workflows/: pylint.yml  quality-config.yml  test-ci-cd.yml
android_app/: .env.example  .gitignore  ANALISE_ENDPOINTS_COMPLETA.md  ANALISE_PAPEL_PERMANENCIA_TEST_UTILS.md  ANALISE_TESTES_UTILS.md  ANALISE_TEST_UNIT_DIRECTORY.md  ANALISE_TEST_WIDGET_DIRECTORY.md  DEVELOPMENT_GUIDE.md  FLUTTER_SETUP_GUIDE.md  LIMPEZA_DIRETORIOS_TESTES.md  README.md  README_EN.md  README_NAVIGATOR.html  analysis_options.yaml  build_apk.bat  demo_script.sh  discover_endpoints.dart  final_integration_test.dart  fix_build_errors.ps1  pubspec.yaml  quality_check.bat  readme.md  setup_and_run.bat  test_backend_connection.dart  test_connection.dart  test_connection_local.dart  test_correct_fields.dart  test_gemma_integration.py  test_post_endpoints.dart  test_real_scenarios.dart
android_app/android/: gradle.properties
android_app/coverage/: lcov.info
android_app/integration_test/: app_integration_test.dart
android_app/ios/: Podfile
android_app/lib/: backend_test_app.dart  main.dart  main_simple.dart  test_api_service.dart  test_connection.dart
android_app/scripts/: run_tests.bat
android_app/test/: run_all_tests.dart  test_config.dart  widget_test.dart
android_app/web/: index.html  manifest.json
android_app/windows/: CMakeLists.txt
backend/: .flake8  .pylintrc  Dockerfile  Dockerfile.production  README.md  README_EN.md  README_NAVIGATOR.html  __init__.py  app.py  list_routes.py  pyproject.toml  pytest.ini  requirements.demo.txt  requirements.txt  run.py  start_optimized.py  swagger.yaml  swagger_config.py
backend/config/: settings.py  system_prompts.py
backend/database/: validation_models.py
backend/database/migrations/: 001_create_validation_tables.sql
backend/routes/: accessibility_routes.py  agriculture_routes.py  collaborative_routes.py  collaborative_validation_routes.py  education_routes.py  environmental_routes.py  health_routes.py  international_routes.py  medical_routes.py  model_management_routes.py  multimodal_routes.py  translation_routes.py  voice_guide_routes.py  wellness_routes.py
backend/routes/environmental/: __init__.py  exemplo_gemma3n,md  recycling_specific.py
backend/scripts/: auto_setup.py
backend/services/: accessibility_service.py  audio_service.py  docs_gemma_service.py  fast_gemma_service.py  gemma_service.py  gemma_service_simplified.py  health_service.py  hybrid_gemma_service.py  improved_gemma_service.py  instant_gemma_service.py  intelligent_model_selector.py  model_selector.py  multimodal_service.py  notebook_inspired_gemma_service.py  official_gemma_service.py  optimized_gemma_service.py  pipeline_gemma_service.py  ultra_fast_gemma_service.py  voice_guide_service.py  voiceguide_accessibility_service.py
backend/templates/: swagger_ui.html
backend/tests/: __init__.py  conftest.py
backend/utils/: decorators.py  error_handler.py  fallback_responses.py  file_handler.py  json_parser.py  logger.py  logging_config.py  performance_metrics.py  response_cache.py  text_processor.py  validators.py
backend_novo/: Dockerfile  app.py
backend_novo/routes/: accessibility_routes.py  education_routes.py  environmental_routes.py  health_routes.py  voice_guide_routes.py
backend_novo/services/: health_service.py
backend_novo/utils/: error_handler.py  logger.py
database/init/: 01-init-smartwaiter.sql
demo/: index.html
docs/: 00-visao-geral-projeto.md  01-gemma3-service.md  02-sistema-medico.md  03-sistema-educacional.md  04-sistema-agricola.md  05-sistema-acessibilidade.md  06-sistema-traducao.md  07-sistema-validacao-comunitaria.md  08-guia-colaborador.md  09-sistema-sustentabilidade-ambiental.md  10-sistema-wellness-coaching.md  11-endpoints-emergencia-medica.md  12-correcao-exibicao-resposta-emergencia.md  13-solucao-final-emergencia-medica.md  DEMO_READINESS_REPORT.md  ENV_READINESS.md  README.md  ROADMAP_30_DIAS_REALIDADE.md  SUBMISSION_CHECKLIST.md
frontend/: Dockerfile  README.md  README_EN.md  README_NAVIGATOR.html  index.html
google-gemma-3n-hackathon/: README
google-gemma-3n-hackathon/archive/: README
icon_generator/: CONTRIBUTING.md  Makefile  README-WINDOWS.md  README.md  automate.ps1  ci.yml  dependabot.yml  dev.bat  dev.ps1  dev.sh  generate-icons.ts  generate.sh  icon-generator.test.ts  install.bat  install.ps1  install.sh  jest.config.js  main.ts  setup.sh  sonar-project.properties
icon_generator/output/: README.md  flutter_assets.yaml
icon_generator/preview/: index.html
icon_generator/src/: cli.ts  flutter-integration.ts  html-generator.ts  icon-generator.ts  index.ts
lib/services/: collaborative_learning_service.dart  ethics_service.dart
nginx/: nginx.conf
nginx/ssl/: cert.pem  key.pem
redis/: redis.conf
scripts/: deploy_hackathon.py
voice/backend/: core.py  data_generator.py  features.py  guide.py  main.py  main_app.py  requirements.txt
(+194 files in other folders)
